Optimize, harden, clean the codebase. Add tests for edge cases. Handle warnings.